# tauri-plugins-workspace

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PLUGIN_TEMPLATE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  taplo.toml  tsconfig.base.json
.changes/: config.json  material-you-android-manager-import.md  material-you-docs-and-metadata-refresh.md  material-you-initial-release.md  material-you-typed-guest-and-iife-registration.md  readme.md  xdg-portal-desktop-integration-initial-release.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/desktop/: devcontainer.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/actions/setup-rust-toolchain/: action.yml
.github/images/ci-base/: Dockerfile
.github/workflows/: ci-base-image.yml  ci.yml  covector-status.yml  covector-version-or-publish.yml  devcontainer-image.yml
examples/api/: README.md  package.json
examples/api/src-tauri/: Cargo.toml
examples/api/src-tauri/src/: lib.rs
plugins/desktop-integration/: Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.js  tsconfig.json
plugins/desktop-integration/guest-js/: index.ts
plugins/desktop-integration/guest-js/bindings/: ShortcutActivatedPayload.ts  ShortcutBindingResult.ts
plugins/desktop-integration/permissions/: default.toml
plugins/desktop-integration/permissions/autogenerated/: reference.md
plugins/desktop-integration/permissions/autogenerated/commands/: check_shortcut_binding_complete.toml  check_shortcut_binding_error.toml  register_shortcut.toml
plugins/desktop-integration/permissions/schemas/: schema.json
plugins/desktop-integration/src/: lib.rs
plugins/hdmv/: Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.js
plugins/hdmv/guest-js/: index.ts
plugins/hdmv/permissions/: default.toml
plugins/hdmv/permissions/autogenerated/: reference.md
plugins/hdmv/permissions/autogenerated/commands/: hdmv_build_disc.toml  hdmv_close_disc.toml  hdmv_get_disc_info.toml  hdmv_get_menu_state.toml  hdmv_get_playlist.toml  hdmv_list_playlists.toml  hdmv_list_titles.toml  hdmv_load_scene.toml  hdmv_mouse_click.toml  hdmv_mouse_move.toml  hdmv_open_disc.toml  hdmv_render_preview.toml  hdmv_send_key.toml  hdmv_start_navigation.toml
plugins/hdmv/permissions/schemas/: schema.json
plugins/hdmv/src/: commands.rs  error.rs  lib.rs  models.rs  session.rs
plugins/material-you/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.js
plugins/material-you/android/: build.gradle.kts
plugins/material-you/android/src/main/java/com/plugin/materialyou/: MaterialYouPlugin.kt
plugins/material-you/guest-js/: index.ts
plugins/material-you/permissions/: default.toml
plugins/material-you/permissions/autogenerated/: reference.md
plugins/material-you/permissions/schemas/: schema.json
plugins/material-you/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/theme-utils/: Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.js
plugins/theme-utils/guest-js/: index.ts
plugins/xdg-portal/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md  api-iife.js  build.rs  package.json  rollup.config.js
plugins/xdg-portal/guest-js/: index.ts
plugins/xdg-portal/guest-js/bindings/: AccentColour.ts  AvailabilityInfo.ts  ColourScheme.ts  DesktopEnvironment.ts  ThemeInfo.ts
plugins/xdg-portal/permissions/: default.toml
plugins/xdg-portal/permissions/autogenerated/: reference.md
plugins/xdg-portal/permissions/autogenerated/commands/: get_theme_info.toml
plugins/xdg-portal/permissions/schemas/: schema.json
plugins/xdg-portal/src/: commands.rs  error.rs  global_shortcuts.rs  lib.rs  linux.rs  models.rs
scripts/: sync-internal-dependency-versions.js
shared/: rollup.config.js
tests/: material-you-guest-js.test.js  sync-internal-dependency-versions.test.ts  workspace-smoke.test.ts
