[workspace]
members = [
  "plugins/*",
  "plugins/*/tests/*",
  "plugins/*/examples/*/src-tauri",
  "examples/*/src-tauri",
]
resolver = "2"

[workspace.dependencies]
# Core Tauri dependencies
tauri = { version = "2.0", default-features = false }
tauri-build = "2.0"
tauri-plugin = "2.0"
tauri-utils = "2.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async runtime (for plugins that need it)
tokio = { version = "1", features = ["rt", "macros", "sync"] }

# Logging
log = "0.4"
tracing = "0.1"

# Utilities
url = "2"

[workspace.package]
edition = "2021"
authors = ["Liminal HQ Contributors"]
license = "Apache-2.0 OR MIT"
rust-version = "1.93.0"
repository = "https://github.com/liminal-hq/liminal-tauri-plugins"

# Optimised release builds
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = false
